workaround for connectivity errors in console

--- a/ios/PrideLondonApp.xcodeproj/xcshareddata/xcschemes/PrideLondonApp.xcscheme
+++ b/ios/PrideLondonApp.xcodeproj/xcshareddata/xcschemes/PrideLondonApp.xcscheme
@@ -101,6 +101,13 @@
             ReferencedContainer = "container:PrideLondonApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
